--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0b4 (2010-11-10)
+------------------
+
+* Added French translations
+* Updated German translations
+
 2.0b3 (2010-10-21)
 ------------------
 
