--- a/raptus/article/table/i18n/raptus.article-fr.po
+++ b/raptus/article/table/i18n/raptus.article-fr.po
@@ -2,170 +2,163 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: raptus.article\n"
-"POT-Creation-Date: 2010-09-17 07:58+0000\n"
-"PO-Revision-Date: 2010-08-24 07:39+0000\n"
-"Last-Translator: Simon Käser <skaeser@raptus.com>\n"
-"Language-Team: German <skaeser@raptus.com>\n"
-"Language: de\n"
+"POT-Creation-Date: 2010-01-11 14:03+0000\n"
+"PO-Revision-Date: 2010-01-11 14:03+0000\n"
+"Last-Translator: Steve Beyeler <sbeyeler@raptus.com>\n"
+"Language-Team: French <sbeyeler@raptus.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language-Code: de\n"
-"Language-Name: Deutsch\n"
+"Language-Code: fr\n"
+"Language-Name: Français\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: raptus.article\n"
-"X-Is-Fallback-For: de-at de-li de-lu de-ch de-de\n"
+"X-Is-Fallback-For: fr-fr fr-be fr-ca fr-ch fr-lu fr-mc\n"
 
 #. Default: "A row of a table"
 #: profiles/default/types/Row.xml
 msgid "A row of a table"
-msgstr "Eine Tabellenzeile"
+msgstr "Une ligne de tableau"
 
 #. Default: "A table"
 #: profiles/default/types/Table.xml
 msgid "A table"
-msgstr "Eine Tabelle"
+msgstr "Un tableau"
 
 #. Default: "Add new table definition"
 #: browser/configlet.pt:60
 msgid "Add new table definition"
-msgstr "Neue Tabellendefinition hinzufügen"
+msgstr "Ajouter une nouvelle définition de tableau"
 
 #: browser/table.py:48
 msgid "Adding ${number} rows failed"
-msgstr "Hinzufügen von ${number} Zeilen ist fehlgeschlagen"
+msgstr "L'ajout de ${number} lignes a échoué"
 
 #: browser/table.py:46
 msgid "Adding one new row failed"
-msgstr "Hinzufügen einer neuen Zeile ist fehlgeschlagen"
+msgstr "L'ajout d'une nouvelle ligne a échoué"
 
 #: browser/tables.py:23
 msgid "List of tables contained in the article on the left side."
-msgstr "Liste der im Artikel enthaltenen Tabellen dargestellt auf der linken Seite."
+msgstr "Liste des tableaux contenus dans l'article affichés à gauche."
 
 #: browser/tables.py:81
 msgid "List of tables contained in the article on the right side."
-msgstr "Liste der im Artikel enthaltenen Tabellen dargestellt auf der rechten Seite."
+msgstr "Liste des tableaux contenus dans l'article affichés à droite."
 
 #: browser/tables.py:106
 msgid "List of tables contained in the article over the whole width."
-msgstr "Liste der im Artikel enthaltenen Tabellen dargestellt über die gesamte "
-"Breite."
+msgstr "Liste des tableaux contenus dans l'article affichés sur toute "
+"la largeur."
 
 #. Default: "Manage table definitions"
 #: browser/configlet.pt:32
 msgid "Manage table definitions"
-msgstr "Tabellendefinitionen verwalten"
+msgstr "Gérer les définitions de tableaux"
 
 #. Default: "Row"
 #: profiles/default/types/Row.xml
 msgid "Row"
-msgstr "Zeile"
+msgstr "Ligne"
 
 #: browser/table.py:44
 msgid "Successfully added ${number} rows"
-msgstr "${number} Zeilen erfolgreich hinzugefügt"
+msgstr "${number} lignes ajoutées avec succès"
 
 #: browser/table.py:42
 msgid "Successfully added new row"
-msgstr "Zeile erfolgreich hinzugefügt"
+msgstr "Ligne ajoutée avec succès"
 
 #. Default: "Table"
 #: profiles/default/types/Table.xml
 msgid "Table"
-msgstr "Tabelle"
+msgstr "Tableau"
 
 #. Default: "Table definitions"
 #: browser/configlet.pt:13
 msgid "Table definitions"
-msgstr "Tabellendefinitionen"
+msgstr "Définions de tableaux"
 
 #: browser/tables.py:105
 msgid "Tables"
-msgstr "Tabellen"
+msgstr "Tableaux"
 
 #: browser/tables.py:22
 msgid "Tables left"
-msgstr "Tabellen links"
+msgstr "Tableaux à gauche"
 
 #: browser/tables.py:80
 msgid "Tables right"
-msgstr "Tabellen rechts"
+msgstr "Tableaux à droite"
 
 #: browser/configlet.py:56
-msgid ""
-"Unable to parse the columns field of one of the definitions to be modified"
-msgstr ""
-"Beim Ändern einer der Tabellendefinitionen ist ein Fehler aufgetreten, "
-"überprüfen Sie das Format des Spalten-Felds."
+msgid "Unable to parse the columns field of one of the definitions to be modified"
+msgstr "Une erreur s'est produite lors de la modification d'une définition "
+"de tableau, veuillez contrôler la valeur saisie dans le champ colonnes."
 
 #: browser/configlet.py:44
 msgid "Unable to parse the columns field of the definition to be added"
-msgstr ""
-"Beim Hinzufügen der neuen Tabellendefinition ist ein Fehler aufgetreten, "
-"überprüfen Sie das Format des Spalten-Felds."
+msgstr "Une erreur s'est produite lors de l'ajout d'une définition de tableau"
+"veuillez contrôler la valeur saisie dans le champ colonnes."
 
 #. Default: "Define the columns of this table one column per line where a line is a \":\" separated list of name, title, type and additional flags of the column. Available types are text, link and html. Available flags are icon and hidden."
 #: browser/configlet.pt:77
 msgid "description_columns"
-msgstr "Definieren Sie die Spalten der Tabelle, eine Spalte pro Zeile, wobei eine "
-"Zeile eine durch \":\" separierte Liste aus Name, Titel, Typ und zusätzlichen Parametern der Spalte ist. "
-"Zur Verfügung stehen die Typen text, link und html. Als zusätzliche Parameter stehen icon und hidden zur Verfügung."
+msgstr "Définissez les colonnes du tableau, une colonne par ligne, considérant qu'une ligne représente "
+"une liste séparée par \":\" et indiquant nom, titre, type et paramètres supplémentaires de la colonne. "
+"Les types text, lien et html sont à disposition. Les paramètre supplémentaires sont icon et hidden."
 
 #. Default: "Select the components in which this table should be displayed."
 #: content/table.py:54
 msgid "description_component_selection_table"
-msgstr ""
-"Wählen Sie die Komponenten aus in welchen diese Tabelle angezeigt werden "
-"soll."
+msgstr "Sélectionnez les composants sensés afficher ce tableau."
 
 #. Default: "Select from predefined table definitions"
 #: content/table.py:25
 msgid "description_definition"
-msgstr "Wählen Sie eine vordefinierte Tabellendefinition"
+msgstr "Sélectionnez une définition de tableau prédéfinie"
 
 #. Default: "Define the style of the table"
 #: browser/configlet.pt:92
 msgid "description_style"
-msgstr "Definieren Sie den Stil der Tabelle"
+msgstr "Définissez les style du tableau"
 
 #. Default: "Add row"
 #: browser/table.pt:39
 msgid "label_add_row"
-msgstr "Zeile hinzufügen"
+msgstr "Ajouter une ligne"
 
 #. Default: "Columns"
 #: browser/configlet.pt:38
 msgid "label_columns"
-msgstr "Spalten"
+msgstr "Colonnes"
 
 #. Default: "Component selection"
 #: content/table.py:55
 msgid "label_component_selection"
-msgstr "Komponentenauswahl"
+msgstr "Choix des composants"
 
 #. Default: "Table definition"
 #: content/table.py:26
 msgid "label_definition"
-msgstr "Tabellendefinition"
+msgstr "Définition de tableau"
 
 #. Default: "Name"
 #: browser/configlet.pt:36
 msgid "label_name"
-msgstr "Name"
+msgstr "Nom"
 
 #. Default: "Remove"
 #: browser/configlet.pt:39
 msgid "label_remove"
-msgstr "Löschen"
+msgstr "Supprimer"
 
 #. Default: "Style"
 #: browser/configlet.pt:37
 msgid "label_style"
-msgstr "Stil"
+msgstr "Style"
 
 #: ./validator.pt:24
 msgid "Please select a table definition or type your own in this field."
-msgstr "Bitte wählen Sie eine Tabellendefinition oder definieren Sie Ihre eigene in diesem Feld."
-
+msgstr "Veuillez choisir une définition de tableau ou veuillez définir la votre dans ce champ."
