--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+2.0b5 (2011-08-05)
+------------------
+
+* Improved configlet and added table columns widget for table content type
+* Added image and file types
+* Added possibility to define cell and heading classes per column
+* Added possibility to define a colspan for columns
+
 2.0b4 (2010-11-10)
 ------------------
 
