--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+2.0b6 (2011-08-05)
+------------------
+
+* Fixed TableColumnsField (KeyError when saving columns)
+
 2.0b5 (2011-08-05)
 ------------------
 
