--- a/raptus/article/table/i18n/raptus.article-de.po
+++ b/raptus/article/table/i18n/raptus.article-de.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: raptus.article\n"
-"POT-Creation-Date: 2011-08-04 14:31+0000\n"
+"POT-Creation-Date: 2011-08-24 13:48+0000\n"
 "PO-Revision-Date: 2010-08-24 07:39+0000\n"
 "Last-Translator: Simon Käser <skaeser@raptus.com>\n"
 "Language-Team: German <skaeser@raptus.com>\n"
@@ -33,7 +33,7 @@ msgid "Add column"
 msgstr "Spalte hinzufügen"
 
 #. Default: "Add new table definition"
-#: browser/configlet.pt:62
+#: browser/configlet.pt:76
 msgid "Add new table definition"
 msgstr "Neue Tabellendefinition hinzufügen"
 
@@ -162,6 +162,15 @@ msgstr "Tabellen rechts"
 msgid "Text"
 msgstr "Text"
 
+#. Default: "The column definition will only be stored after saving the whole configuration form."
+#: browser/configlet.pt:64
+msgid ""
+"The column definition will only be stored after saving the whole "
+"configuration form."
+msgstr ""
+"Die Spaltendefinition wird erst nach dem Absenden des gesamten "
+"Konfigurationsformulars gespeichert."
+
 #. Default: "Title"
 #: skins/raptus_article_table/raptus_article_table_columns.pt:29
 msgid "Title"
@@ -172,21 +181,26 @@ msgstr "Titel"
 msgid "Type"
 msgstr "Typ"
 
-#: browser/configlet.py:75
+#: browser/configlet.py:76
 msgid ""
 "Unable to parse the columns field of one of the definitions to be modified"
 msgstr ""
 "Beim Ändern einer der Tabellendefinitionen ist ein Fehler aufgetreten, "
 "überprüfen Sie das Format des Spalten-Felds."
 
-#: browser/configlet.py:64
+#: browser/configlet.py:65
 msgid "Unable to parse the columns field of the definition to be added"
 msgstr ""
 "Beim Hinzufügen der neuen Tabellendefinition ist ein Fehler aufgetreten, "
 "überprüfen Sie das Format des Spalten-Felds."
 
+#. Default: "Define the columns of the table. This will override the columns defined by the table definition if one is selected."
+#: content/table.py:47
+msgid "description_columns_override"
+msgstr "Definieren Sie die Spalten der Tabelle. Übergeht die in der Tabellendefinition definierten Spalten falls eine ausgewählt ist."
+
 #. Default: "Select the components in which this table should be displayed."
-#: content/table.py:55
+#: content/table.py:57
 msgid "description_component_selection_table"
 msgstr ""
 "Wählen Sie die Komponenten aus in welchen diese Tabelle angezeigt werden "
@@ -198,12 +212,17 @@ msgid "description_definition"
 msgstr "Wählen Sie eine vordefinierte Tabellendefinition"
 
 #. Default: "Define the style of the table"
-#: browser/configlet.pt:91
+#: browser/configlet.pt:105
 msgid "description_style"
 msgstr "Definieren Sie den Stil der Tabelle"
 
+#. Default: "Define the style of the table. This will override the style defined by the table definition if one is selected."
+#: content/table.py:38
+msgid "description_style_override"
+msgstr "Definieren Sie den Stil der Tabelle. Übergeht den in der Tabellendefinition definierte Stil falls eine ausgewählt ist."
+
 #. Default: "Add row"
-#: browser/table.pt:53
+#: browser/table.pt:54
 msgid "label_add_row"
 msgstr "Zeile hinzufügen"
 
@@ -213,7 +232,7 @@ msgid "label_columns"
 msgstr "Spalten"
 
 #. Default: "Component selection"
-#: content/table.py:56
+#: content/table.py:58
 msgid "label_component_selection"
 msgstr "Komponentenauswahl"
 
