* block modifications on a table thats are already in use. * fixed odd/even columns * add scrollbar to lightbox for large definitions.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,15 @@
 Changelog
 =========
 
+2.0b8 (2011-10-04)
+------------------
+
+* block modifications on a table thats are already in use.
+* fixed odd/even columns
+* add scrollbar to lightbox for large definitions.
+
+
+
 2.0b7 (2011-08-25)
 ------------------
 
