fixed spelling in history

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 ------------------
 
 * Fixed KeyError if no columns are defined for a table
-* Added possibility to select the position where to add new columns
+* Added possibility to select the position where to add new rows
 
 2.0b8 (2011-10-18)
 ------------------
